--- a/src/ICP_Blockbash_frontend/assets/main.css
+++ b/src/ICP_Blockbash_frontend/assets/main.css
@@ -9,7 +9,7 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #f4f4f4;
+  background-color: #f4f4f4a7;
   color: #333;
   line-height: 1.6;
 }
